--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "autoprefixer": "^9.8.0",
     "gatsby": "^2.21.37",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
